# mac-backup

./: .envrc  .gitignore  .mackup.cfg  AGENTS.md  CLAUDE.md  README.md  TODO.md  bootstrap.sh  flake.nix  nvfetcher.toml
.claude/: settings.json
.claude/hooks/: require-tools.sh
.githooks/: pre-commit
.github/workflows/: tailscale-policy.yml  update-github-sources.yml  validate.yml
.serena/: project.yml
_sources/: generated.json  generated.nix
configs/: login-items.txt  raycast.rayconfig
configs/archon/: change-check.yaml  cohesion-review.yaml
configs/specs/: README.md  app-service-contract.md  code-unit-cohesion.md  dotfiles-system.md
configs/tailscale/: policy.hujson
docs/: backup-strategy.md  cognee-agent-hooks.md  cognee.md  github-release-packages.md  home-manager-options.md  nix-concepts.md  nix-darwin-options.md  system-setup.md  tailscale.md  troubleshooting.md
home/: darwin.nix  nixos.nix
hosts/: tailnet.nix
hosts/darwin/: default.nix
hosts/nixos/: default.nix
hosts/popemkt-personal/: default.nix
hosts/popemkt-work/: default.nix
intent/: SURFACES.md  gate.sh
modules/: home.nix
modules/darwin-home/: default.nix  mackup.nix
modules/darwin-system/: external-workspace.nix  headroom.nix  hermes.nix  homebrew.nix  input-sources.nix
pkgs/: default.nix
scripts/: audit-system-discrepancies.sh  dump-login-items.sh  github-sources
tools/system-setup/: pyproject.toml
tools/system-setup/src/system_setup/: __init__.py  checks.py  cli.py  manifest.py  models.py  native.py
tools/system-setup/tests/: test_checks.py  test_models.py
(+50 files in other folders)
