[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dotfiles-system-setup"
version = "0.1.0"
description = "Executable onboarding and readiness checks for the dotfiles system"
requires-python = ">=3.13,<3.14"
dependencies = [
  "pydantic==2.13.4",
  "rich==15.0.0",
  "typer==0.27.0",
]

[project.scripts]
system-setup = "system_setup.cli:main"

[dependency-groups]
dev = [
  "pyrefly==1.1.1",
  "pytest==9.1.1",
  "ruff==0.15.22",
]

[tool.hatch.build.targets.wheel]
packages = ["src/system_setup"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

